@@ -5,9 +5,6 @@ BUGS:
   * Remember menu sometimes isn't present in window menu. Probably need
     to add a signal for menu reconfigures (Screen::setupWindowActions)
 
-  * MenuAlpha (at least) isn't 'per-screen' - takes the value of the
-    highest numbered screen.
-
   * Window handle is invisible sometimes.
 
   * KDE support needs attention (e.g. klipper).
@@ -73,4 +70,9 @@ Fixed bugs (or not-our-fault bugs):
     value on init. Also check why Fluxbox::Layer is used rather than int.
     => Fixed by reorganising the way ResourceManager works.
        Fluxbox::Layer is used so that we can give some layers names
+
+  * MenuAlpha (at least) isn't 'per-screen' - takes the value of the
+    highest numbered screen.
+    => Fixed, moved alpha setting into MenuTheme rather than static value
+
 
